<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_wise"
        android:icon="?menu_ic_secure_login"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/tab_timetable_wise_login_title">
    </item>
    <item
        android:id="@+id/action_delete"
        android:icon="?menu_ic_content_discard"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/action_delete">
    </item>
    <item
        android:id="@+id/action_save"
        android:icon="?menu_ic_content_save"
        android:orderInCategory="103"
        android:showAsAction="ifRoom"
        android:title="@string/action_save">
    </item>

</menu>