<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="?menu_ic_action_search"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_search">
    </item>
    <item
        android:id="@+id/action_backward"
        android:icon="?menu_ic_navigation_back"
        android:orderInCategory="103"
        android:showAsAction="always"
        android:title="@string/action_backward">
    </item>
    <item
        android:id="@+id/action_forward"
        android:icon="?menu_ic_navigation_forward"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/action_forward">
    </item>

</menu>