<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_wise"
        android:icon="@drawable/ic_action_content_import_export_dark"
        android:orderInCategory="101"
        android:showAsAction="always|withText"
        android:title="@string/tab_timetable_wise_login_title">
    </item>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_content_discard_dark"
        android:orderInCategory="102"
        android:showAsAction="always|withText"
        android:title="@string/action_delete">
    </item>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_content_save_dark"
        android:orderInCategory="103"
        android:showAsAction="always|withText"
        android:title="@string/action_save">
    </item>

</menu>