<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:paddingTop="5dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/tab_search_subject_head_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/darker_gray"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/tab_search_subject_head_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tab_search_subject_sub_dept1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_sub_dept1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_sub_div1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_sub_div1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_no1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_no1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_class_div1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_class_div1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_sub_nm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_sub_nm1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_yr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_yr1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_credit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_credit1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_prof_nm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_prof_nm1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_class_nm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_class_nm1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_tlsn_cnt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_tlsn_cnt1" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tab_search_subject_tlsn_limit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_search_subject_tlsn_limit1" />
        </LinearLayout>

        <ListView
            android:id="@+id/tab_search_subject_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tab_search_subject_head_layout"
            android:layout_marginTop="1dp"
            android:fastScrollEnabled="true"
            android:scrollingCache="true" >
        </ListView>

        <LinearLayout
            android:id="@+id/tab_search_subject_line_layout"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tab_search_subject_head_layout"
            android:background="@android:color/darker_gray"
            android:orientation="vertical" />

        <RelativeLayout
            android:id="@+id/tab_search_subject_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/selector_button_dark"
            android:padding="2dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/empty1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_action_action_search_dark"
                android:gravity="center_vertical"
                android:text="@string/tab_subject_empty_view_hint" />

            <TextView
                android:id="@+id/empty2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/empty1"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_action_content_import_export_dark"
                android:gravity="center_vertical"
                android:text="@string/tab_subject_empty_view_sort" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/empty2"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_action_navigation_accept_dark"
                android:text="@string/tab_subject_empty_view_hint_subj" />
        </RelativeLayout>
    </RelativeLayout>

</HorizontalScrollView>